force-app/main/default/objects/cgcloud__Contract_Product__c/cgcloud__Contract_Product__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the relationship between a customer contract and a product, used to capture product-specific agreements included in a customer contract</description>
    <label>Contract Product</label>
    <nameField>
        <displayFormat>CP-{00000000}</displayFormat>
        <label>Customer Contract Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Product</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>