force-app/main/default/objects/cgcloud__Contract_Product__c/fields/cgcloud__Amount__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Amount__c</fullName>
    <description>Discount of the promoted product.</description>
    <label>Discount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>