force-app/main/default/objects/cgcloud__Contract_Product__c/fields/cgcloud__Consumer_Price__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consumer_Price__c</fullName>
    <description>Promoted price of the product</description>
    <label>Promoted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>