force-app/main/default/objects/cgcloud__Contract_Product__c/fields/cgcloud__Contract__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Contract__c</fullName>
    <description>Relation to the customer contract.</description>
    <label>Customer Contract</label>
    <referenceTo>cgcloud__Contract__c</referenceTo>
    <relationshipLabel>Customer Contract Product</relationshipLabel>
    <relationshipName>Contract_Product</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>