force-app/main/default/objects/cgcloud__Contract_Product__c/fields/cgcloud__Planned_Quantity__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Planned_Quantity__c</fullName>
    <description>Incremental quantity caused by tactic</description>
    <label>Quantity</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>