force-app/main/default/objects/cgcloud__Contract_Product__c/fields/cgcloud__Product__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND ((4 AND 2) OR (3 AND 5))</booleanFilter>
        <errorMessage>The Product and the Contract Product must have the same Sales Org.</errorMessage>
        <filterItems>
            <field>Product2.cgcloud__Competitive_Product__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>Product2.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <valueField>$Source.cgcloud__Sales_Org__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>$Source.cgcloud__Sales_Org__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Product2.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Contract Product</relationshipLabel>
    <relationshipName>Contract_Product</relationshipName>
    <type>Lookup</type>
</CustomField>