force-app/main/default/objects/cgcloud__Contract_Product__c/validationRules/cgcloud__Check_SalesOrg.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_SalesOrg</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT(cgcloud__Contract__r.cgcloud__Account_Contract_Template__r.cgcloud__Sales_Org__c) &lt;&gt; cgcloud__Product__r.cgcloud__Sales_Org__c</errorConditionFormula>
    <errorMessage>The Contract and the Product must have the same Sales Org.</errorMessage>
</ValidationRule>