force-app/main/default/objects/cgcloud__Contract_Product__c/validationRules/cgcloud__Check_TemplatePolicy.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_TemplatePolicy</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(cgcloud__Contract__r.cgcloud__Account_Contract_Template__r.cgcloud__Product_Policy__c, &apos;No&apos;)</errorConditionFormula>
    <errorMessage>Contract Product can&apos;t be created if the Product Policy on Contract Template is &apos;No&apos;.</errorMessage>
</ValidationRule>