force-app/main/default/objects/cgcloud__Contract_Product__c/validationRules/cgcloud__Quantity_And_Amount_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Quantity_And_Amount_Positive</fullName>
    <active>true</active>
    <description>The Quantity and/or the Discount must be a number equal or greater than 0.</description>
    <errorConditionFormula>cgcloud__Planned_Quantity__c &lt; 0 || cgcloud__Amount__c &lt; 0</errorConditionFormula>
    <errorMessage>The Quantity and/or the Discount must be a number equal or greater than 0.</errorMessage>
</ValidationRule>